fix: match the java version with the AWS